[gd_scene load_steps=19 format=2]

[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://image/Thintel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://bacground/grounds-4.png" type="Texture" id=3]
[ext_resource path="res://bacground/grounds-2.png" type="Texture" id=4]
[ext_resource path="res://bacground/grounds-1.png" type="Texture" id=5]
[ext_resource path="res://scene/Background.gd" type="Script" id=6]
[ext_resource path="res://scene/Main.gd" type="Script" id=7]
[ext_resource path="res://bacground/ground.png" type="Texture" id=8]
[ext_resource path="res://scene/Ster.tscn" type="PackedScene" id=9]
[ext_resource path="res://score_value.tres" type="Resource" id=10]
[ext_resource path="res://image/Gugi-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://bacground/grounds-5.png" type="Texture" id=12]
[ext_resource path="res://scene/BigSter.tscn" type="PackedScene" id=13]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 644, 242, 0, 0, 0, 0, 458, 250, 0, 0, 0, 0, 448, 504, 0, 0, 0, 0, 642, 506, 0, 0, 0, 0, 646, 274, 0, 0, 0, 0, 644, 242 )
}

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=4]
size = 45
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 50.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.3, 0, 20, 31.8, 60 ),
"transitions": PoolRealArray( 1, 1, 2.54912, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 0.607843, 0.360784, 0.360784, 0.901961 ), Color( 1, 1, 1, 0.843137 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Sky2/Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 14.5, 20 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.588235, 0.278431, 0.278431, 1 ) ]
}

[node name="Main" type="Node" groups=[
"main",
]]
script = ExtResource( 7 )
Mob = ExtResource( 9 )
B_Mob = ExtResource( 13 )
ScoreV = ExtResource( 10 )

[node name="Background" type="ParallaxBackground" parent="."]
script = ExtResource( 6 )

[node name="CanvasModulate" type="CanvasModulate" parent="Background"]
visible = false
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
light_mask = 3
z_as_relative = false
color = Color( 1, 1, 1, 0 )

[node name="TextureRect" type="TextureRect" parent="Background"]
modulate = Color( 0.14902, 0.803922, 1, 0.658824 )
light_mask = 3
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sky2" type="ParallaxLayer" parent="Background"]
light_mask = 0
motion_scale = Vector2( 0.008, 1 )
motion_mirroring = Vector2( 1024, 600 )

[node name="Sprite" type="Sprite" parent="Background/Sky2"]
position = Vector2( -2, 0 )
scale = Vector2( 1, 1.07 )
texture = ExtResource( 4 )
centered = false

[node name="Sky3" type="ParallaxLayer" parent="Background"]
light_mask = 0
motion_scale = Vector2( 0.03, 1 )
motion_mirroring = Vector2( 1024, 600 )

[node name="Sprite" type="Sprite" parent="Background/Sky3"]
texture = ExtResource( 5 )
centered = false

[node name="Ground" type="ParallaxLayer" parent="Background"]
light_mask = 3
motion_scale = Vector2( 0.7, 1 )
motion_mirroring = Vector2( 1024, 600 )

[node name="Sprite" type="Sprite" parent="Background/Ground"]
texture = ExtResource( 8 )
centered = false

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
light_mask = 3
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 394, 382 )
scale = Vector2( 1.76, 1.44 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="MobPath" type="Path2D" parent="."]
position = Vector2( -732, -48 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="MobPath"]
position = Vector2( 644, 242 )
rotate = false

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="ComboTimer" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 56, 572 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
light_mask = 0
margin_left = 624.0
margin_top = 304.0
margin_right = 924.0
margin_bottom = 705.0
mouse_filter = 2
size_flags_horizontal = 15
size_flags_vertical = 15
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboLabel" type="RichTextLabel" parent="CanvasLayer/VBoxContainer2"]
margin_right = 300.0
margin_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 49 )
rect_clip_content = false
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 0.984314, 0.682353, 1 )
bbcode_enabled = true
bbcode_text = " d"
text = " d"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusTime" type="RichTextLabel" parent="CanvasLayer/VBoxContainer2"]
margin_top = 49.0
margin_right = 300.0
margin_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 30, 70 )
rect_clip_content = false
mouse_filter = 2
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.964706, 0.611765, 0.290196, 1 )
bbcode_enabled = true
text = " d"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 169.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
text = "TIME : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxcomboLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 36.0
margin_right = 169.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 4 )
text = "MAX COMBO : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 72.0
margin_right = 169.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 4 )
text = "SCORE : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 5 )

[node name="BigStar" type="Node" parent="."]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="ComboTimer" to="." method="_on_ComboTimer_timeout"]
